# the_matrix

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/agent/: Dockerfile  README.md  pyproject.toml
apps/agent/data/: source-policy.yaml
apps/agent/saxa/: __main__.py
apps/agent/saxa/core/: budget.py  config.py  db.py  llm.py  loop.py  observability.py  orchestrator.py  router.py
apps/agent/saxa/domains/: __init__.py
apps/agent/saxa/domains/finance/: decision.py  intent.py  pipeline.py  portfolio.py  radar.py  risk.py  step0.py  wiki.py
apps/agent/saxa/domains/travel/: README.md  __init__.py  browser.py  service.py  tm47.py
apps/agent/saxa/domains/vault/: __init__.py  handler.py  tools.py
apps/agent/saxa/gates/: source_gate.py  telegram_md_lint.py  vault_gate.py
apps/agent/saxa/gateway/: chat.py  telegram.py
apps/agent/saxa/tools/: carpatos.py  citrini.py  finnhub.py  reddit.py  technical.py  x_lists.py
apps/agent/tests/: conftest.py  test_budget_loop.py  test_commands.py  test_decision.py  test_intent_gates.py  test_orchestrator.py  test_radar.py  test_risk.py  test_router.py  test_travel.py  test_travel_flow.py  test_vault_chat.py  test_wiki.py
apps/client/: README.md
apps/etl/: Dockerfile  README.md  package.json  tsconfig.json
docs/: DISENO-SISTEMA-UNIFICADO.md  PLAN-CONSTRUCCION.md
docs/referencias/: PLAN-MEJORAS-FINANCIAL-FREEDOM.md  (+1 more)
evals/: run_evals.py
evals/golden/: gates.yaml  (+1 more)
infra/: loops.yaml  models.yaml  radar-rules.yaml  risk-rules.yaml
(+158 files in other folders)
