[project]
name = "saxa"
version = "0.1.0"
description = "saxa — orquestador de agentes de the_matrix (arquitectura Hermes)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49",
    "httpx>=0.27",
    "langgraph>=1.2,<2",
    "pydantic>=2.7",
    "psycopg[binary,pool]>=3.2",
    "pyyaml>=6.0",
    "yt-dlp>=2026.6.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
saxa = "saxa.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saxa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
